# notgpt

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
gpts/: Cargo.toml
gpts/src/: lib.rs  token_functions.rs
gpts/sys/: Cargo.toml  build.rs
notgpt-bin/: Cargo.toml
notgpt-bin/src/: main.rs
notgpt-cli/: Cargo.toml
notgpt-cli/src/: generic_model.rs  main.rs
notgpt-generic-model/: Cargo.toml
notgpt-generic-model/src/: lib.rs
notgpt-model/: Cargo.toml
notgpt-model-interface/: Cargo.toml
notgpt-model-interface/src/: lib.rs
notgpt-model/src/: lib.rs
notgpt-telegram/: Cargo.toml
notgpt-telegram/src/: main.rs
rwkv/: Cargo.toml
rwkv/src/: lib.rs  token_functions.rs
rwkv/sys/: Cargo.toml  build.rs
