[package]
name = "gpts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpts-sys = {path = "sys", version = "0.1"}
tokenizers = "^0.13.3"
thiserror = "^1.0.40"
rand = "^0.8.5"
log = "0.4"
llm = "^0.1.1"