[package]
name = "not-gpt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = {version = "^0.25.0", features = ["async-http-client"]}
tokio = {version = "^1.27.0", features = ["full"] }
anyhow = "^1.0.71"