[package]
name = "notgpt-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.70"
rand = "^0.8.5"
log = "0.4"
notgpt-model-interface = { path = "../notgpt-model-interface" }
tokenizers = "^0.13.3"
thiserror = "^1.0.40"